force-app/main/default/objects/Vehicle__c/fields/License_Plate_Number__c.field-meta.xml
<CustomField>
        <fullName>License_Plate_Number__c</fullName>
        <label>License Plate Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>