force-app/main/default/objects/Vehicle__c/fields/Odometer__c.field-meta.xml
<CustomField>
        <fullName>Odometer__c</fullName>
        <label>Odometer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>