force-app/main/default/objects/Vehicle__c/fields/WF_Vehicle_Id__c.field-meta.xml
<CustomField>
        <fullName>WF_Vehicle_Id__c</fullName>
        <label>WF Vehicle Id</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>