force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>License_Plate_Number__c</columns>
        <columns>Odometer__c</columns>
        <columns>WF_Vehicle_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>